...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin">

        <TextView
            android:id="@+id/previousTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_skip_previous_black_24dp"
            android:drawablePadding="@dimen/element_spacing"
            android:drawableStart="@drawable/ic_skip_previous_black_24dp"
            android:text="@string/instruction_previous"
            android:textSize="@dimen/instructions_steps_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nextTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_skip_next_black_24dp"
            android:drawablePadding="@dimen/element_spacing"
            android:drawableRight="@drawable/ic_skip_next_black_24dp"
...
